--- a/pages/pagina17.html
+++ b/pages/pagina17.html
@@ -10,39 +10,41 @@
 
 <body>
     <header>
-        <img src="../img/logo.png" class="topleft clicable"
-         onclick="returnToHome()" height="100" width="100">
-        <h1>O Início da Internet e a Expansão Global</h1>
+        <img src="../img/logo.png" class="topleft clicable" onclick="returnToHome()" height="100" width="100">
+        <h1>telegrafo e codigo morse</h1>
     </header>
     <main>
         <div class="text">
-            <h2>O Início da Internet e a Expansão Global: </h2>
-            <img src="" alt="images-2" border="0">
-            <p>Nos anos 1990, a internet, que já existia desde os anos 1960 e 1970 de forma restrita e acadêmica, começou a se expandir para o público em geral. Em 1991, a World Wide Web (WWW) foi criada por Tim Berners-Lee, facilitando a navegação e a interação online por meio de páginas e links. Antes disso, a internet era principalmente uma ferramenta usada por governos, universidades e empresas para fins técnicos e de pesquisa.
+            <p>
+                Em meados da década de 1840, o mundo testemunhou uma revolução nas comunicações com a chegada do
+                telégrafo elétrico e do Código Morse. Essa inovação transformaria radicalmente a forma como as
+                informações eram transmitidas, encurtando distâncias e conectando pessoas e negócios de uma maneira
+                nunca antes imaginada.
 
-A partir do início da década de 1990, com o lançamento de navegadores como o Mosaic (1993) e o Netscape Navigator (1994), a navegação na internet se tornou mais acessível e intuitiva. Isso permitiu que milhões de pessoas ao redor do mundo começassem a explorar a web, acessar informações e interagir online. O desenvolvimento da tecnologia de modems também possibilitou o acesso dial-up, permitindo que as casas conectassem seus computadores à internet por meio de linhas telefônicas.
             </p>
-            <li>Início da Internet
-
-            </li>
-            <li>Expansão da internet para o público geral.
-
-            </li>
-            <li>Criação da World Wide Web (WWW) por Tim Berners-Lee em 1991.
-            </li>
-            <li>Lançamento de navegadores como Mosaic (1993) e Netscape Navigator (1994).
-
-
-
-            </li>
-
-        </div>
-        <div>
-            <!--volta para a pagina inicial-->
-            <button onclick="returnToHome()">Voltar</button>
+            <h5>A Invenção e Seus Inventores:</h5>
+            <p>
+                Embora muitos tivessem explorado a ideia da telegrafia, foi Samuel Morse, um pintor americano com um
+                interesse em eletricidade, quem é amplamente creditado por desenvolver um sistema prático e
+                comercialmente viável. Com a ajuda de seus colaboradores, Alfred Vail e Joseph Henry, Morse aprimorou
+                seu projeto e, em 1844, enviou a famosa mensagem "What hath God wrought?" (O que Deus tem feito?) de
+                Washington D.C. para Baltimore, marcando o início de uma nova era.
+            </p>
+            <div class="resumo">
+                <h3>resumo:</h3>
+                <p>
+                    Apesar do surgimento de tecnologias mais avançadas, como o telefone e a internet, o telégrafo e o
+                    Código Morse deixaram um legado inegável. Eles foram os precursores da era da comunicação
+                    instantânea, demonstrando o poder da eletricidade para superar as barreiras da distância. O Código
+                    Morse, em particular, continuou sendo usado em diversas aplicações, inclusive na aviação e na
+                    navegação marítima, por muitas décadas, provando a genialidade de seu design e a eficácia de sua
+                    simplicidade. A década de 1840, com o advento do telégrafo, solidificou um marco crucial na história
+                    da comunicação humana, pavimentando o caminho para o mundo conectado em que vivemos hoje.
+                </p>
+            </div>
+            <img src="https://i.ibb.co/Ld4wVBsy/download.jpg">
         </div>
     </main>
-    <footer></footer>
     <script src="../js/navigation.js"></script>
 </body>
 
