--- a/pages/pagina18.html
+++ b/pages/pagina18.html
@@ -7,42 +7,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pagina 18</title>
     <link rel="stylesheet" href="../css/pages.css">
-
 <body>
     <header>
-        <img src="../img/logo.png" class="topleft clicable"
-         onclick="returnToHome()" height="100" width="100">
-        <h1>O Início da Internet e a Expansão Global</h1>
+        <img src="../img/logo.png" class="topleft clicable" onclick="returnToHome()" height="100" width="100">
+        <h1>Telefone de Graham Bell (1876)</h1>
     </header>
     <main>
         <div class="text">
-            <h2>O Início da Internet e a Expansão Global: </h2>
-            <img src="" alt="images-2" border="0">
-            <p>Nos anos 1990, a internet, que já existia desde os anos 1960 e 1970 de forma restrita e acadêmica, começou a se expandir para o público em geral. Em 1991, a World Wide Web (WWW) foi criada por Tim Berners-Lee, facilitando a navegação e a interação online por meio de páginas e links. Antes disso, a internet era principalmente uma ferramenta usada por governos, universidades e empresas para fins técnicos e de pesquisa.
-
-A partir do início da década de 1990, com o lançamento de navegadores como o Mosaic (1993) e o Netscape Navigator (1994), a navegação na internet se tornou mais acessível e intuitiva. Isso permitiu que milhões de pessoas ao redor do mundo começassem a explorar a web, acessar informações e interagir online. O desenvolvimento da tecnologia de modems também possibilitou o acesso dial-up, permitindo que as casas conectassem seus computadores à internet por meio de linhas telefônicas.
+            <p>Em 1876, o mundo testemunhou uma inovação que transformaria radicalmente a comunicação interpessoal: o
+                telefone, patenteado por Alexander Graham Bell. Embora a ideia de transmitir a voz humana por
+                eletricidade não fosse inteiramente nova, foi Bell quem desenvolveu um aparelho prático e funcional,
+                abrindo as portas para uma revolução na forma como as pessoas se conectavam.
             </p>
-            <li>Início da Internet
-
-            </li>
-            <li>Expansão da internet para o público geral.
-
-            </li>
-            <li>Criação da World Wide Web (WWW) por Tim Berners-Lee em 1991.
-            </li>
-            <li>Lançamento de navegadores como Mosaic (1993) e Netscape Navigator (1994).
-
-
-
-            </li>
-
-        </div>
-        <div>
-            <!--volta para a pagina inicial-->
-            <button onclick="returnToHome()">Voltar</button>
+            <div class="resumo">
+                <h3>resumo:</h3>
+                <p>
+                    O telefone de Alexander Graham Bell foi mais do que uma invenção técnica; foi um catalisador social
+                    que encurtou o mundo e mudou para sempre a forma como os seres humanos se relacionavam. Ele abriu
+                    caminho para a rede global de comunicação que temos hoje, incluindo a internet e os telefones
+                    celulares. A voz humana, antes limitada pela distância, podia agora viajar por todo o planeta,
+                    unindo pessoas e culturas e lançando as bases para a era da conectividade total.
+                </p>
+            </div>
+            <img src="https://i.ibb.co/3yMhTqyH/download.jpg">
         </div>
     </main>
-    <footer></footer>
     <script src="../js/navigation.js"></script>
 </body>
 
