--- a/pages/pagina19.html
+++ b/pages/pagina19.html
@@ -10,36 +10,19 @@
 
 <body>
     <header>
-        <img src="../img/logo.png" class="topleft clicable"
-         onclick="returnToHome()" height="100" width="100">
-        <h1>O Início da Internet e a Expansão Global</h1>
+        <img src="../img/logo.png" class="topleft clicable" onclick="returnToHome()" height="100" width="100">
+        <h1>Lâmpada Elétrica de Thomas Edison</h1>
     </header>
     <main>
         <div class="text">
-            <h2>O Início da Internet e a Expansão Global: </h2>
-            <img src="" alt="images-2" border="0">
-            <p>Nos anos 1990, a internet, que já existia desde os anos 1960 e 1970 de forma restrita e acadêmica, começou a se expandir para o público em geral. Em 1991, a World Wide Web (WWW) foi criada por Tim Berners-Lee, facilitando a navegação e a interação online por meio de páginas e links. Antes disso, a internet era principalmente uma ferramenta usada por governos, universidades e empresas para fins técnicos e de pesquisa.
-
-A partir do início da década de 1990, com o lançamento de navegadores como o Mosaic (1993) e o Netscape Navigator (1994), a navegação na internet se tornou mais acessível e intuitiva. Isso permitiu que milhões de pessoas ao redor do mundo começassem a explorar a web, acessar informações e interagir online. O desenvolvimento da tecnologia de modems também possibilitou o acesso dial-up, permitindo que as casas conectassem seus computadores à internet por meio de linhas telefônicas.
-            </p>
-            <li>Início da Internet
-
-            </li>
-            <li>Expansão da internet para o público geral.
-
-            </li>
-            <li>Criação da World Wide Web (WWW) por Tim Berners-Lee em 1991.
-            </li>
-            <li>Lançamento de navegadores como Mosaic (1993) e Netscape Navigator (1994).
-
-
-
-            </li>
-
-        </div>
-        <div>
-            <!--volta para a pagina inicial-->
-            <button onclick="returnToHome()">Voltar</button>
+            <p>A invenção e o desenvolvimento da fotografia e das câmeras no século XIX revolucionaram a forma como as
+                pessoas registravam e percebiam o mundo. O período foi marcado por avanços significativos, partindo de
+                processos lentos e complexos até chegar a métodos mais práticos e acessíveis.</p>
+            <div class="resumo">Em suma, o século XIX foi um período de efervescência e inovação na fotografia, com a
+                transição de experimentos rudimentares para a criação de processos e equipamentos que lançaram as bases
+                para a fotografia como a conhecemos hoje.
+            </div>
+            <img src="https://i.ibb.co/6cfwyyw3/download.jpg">
         </div>
     </main>
     <footer></footer>
