--- a/pages/pagina20.html
+++ b/pages/pagina20.html
@@ -2,46 +2,52 @@
 <html lang="pt-BR">
 
 <head>
-    <link rel="stylesheet" href="css/pages.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pagina 20</title>
+    <title>Os Primeiros Carros</title>
     <link rel="stylesheet" href="../css/pages.css">
+</head>
 
 <body>
     <header>
-        <img src="../img/logo.png" class="topleft clicable"
-         onclick="returnToHome()" height="100" width="100">
-        <h1>O Início da Internet e a Expansão Global</h1>
+        <img src="../img/logo.png" class="topleft clicable" onclick="returnToHome()" height="100" width="100" alt="Logo">
+        <h1>Automóveis e Motores a Combustão Interna</h1>
     </header>
+
     <main>
         <div class="text">
-            <h2>O Início da Internet e a Expansão Global: </h2>
-            <img src="" alt="images-2" border="0">
-            <p>Nos anos 1990, a internet, que já existia desde os anos 1960 e 1970 de forma restrita e acadêmica, começou a se expandir para o público em geral. Em 1991, a World Wide Web (WWW) foi criada por Tim Berners-Lee, facilitando a navegação e a interação online por meio de páginas e links. Antes disso, a internet era principalmente uma ferramenta usada por governos, universidades e empresas para fins técnicos e de pesquisa.
+            <p>A revolução do transporte começou com o desenvolvimento dos automóveis e dos motores a combustão interna no final do século XIX, mudando totalmente a forma como vivemos, trabalhamos e nos deslocamos.</p>
 
-A partir do início da década de 1990, com o lançamento de navegadores como o Mosaic (1993) e o Netscape Navigator (1994), a navegação na internet se tornou mais acessível e intuitiva. Isso permitiu que milhões de pessoas ao redor do mundo começassem a explorar a web, acessar informações e interagir online. O desenvolvimento da tecnologia de modems também possibilitou o acesso dial-up, permitindo que as casas conectassem seus computadores à internet por meio de linhas telefônicas.
-            </p>
-            <li>Início da Internet
+            <h2>Os Primórdios</h2>
+            <p>Antes dos motores a gasolina, veículos movidos a vapor já existiam desde o século XVIII. Eram usados na indústria, mas eram pesados e pouco práticos.</p>
+            <p>Inventores como Samuel Brown e Étienne Lenoir criaram motores a gás, mas ainda eram ineficientes para veículos.</p>
 
-            </li>
-            <li>Expansão da internet para o público geral.
+            <h2>O Motor de Quatro Tempos</h2>
+            <p>Em 1876, Nikolaus Otto desenvolveu o motor de quatro tempos, conhecido como Ciclo Otto, um grande avanço em eficiência e potência, estabelecendo a base dos motores modernos.</p>
 
-            </li>
-            <li>Criação da World Wide Web (WWW) por Tim Berners-Lee em 1991.
-            </li>
-            <li>Lançamento de navegadores como Mosaic (1993) e Netscape Navigator (1994).
+            <h2>O Nascimento do Automóvel</h2>
+            <p>Karl Benz criou em 1886 o Benz Patent-Motorwagen, considerado o primeiro carro prático movido a gasolina. No mesmo período, Daimler e Maybach criaram o Reitwagen, uma espécie de motocicleta motorizada, e depois adaptaram o motor para um carro de quatro rodas.</p>
 
+            <h2>Avanços e Popularização</h2>
+            <p>Com o tempo, pneus de borracha, direção e freios melhores tornaram os carros mais seguros e confortáveis. A indústria automotiva começava a se expandir.</p>
 
+            <h2>Impactos Transformadores</h2>
+            <ul>
+                <li><strong>Mobilidade Pessoal:</strong> Liberdade de viajar sem depender de transporte público.</li>
+                <li><strong>Crescimento Urbano:</strong> Expansão das cidades e criação de subúrbios.</li>
+                <li><strong>Indústria e Comércio:</strong> Produção em massa e mais empregos.</li>
+                <li><strong>Infraestrutura:</strong> Construção de estradas, postos e oficinas.</li>
+                <li><strong>Mudanças Sociais:</strong> Influenciou a cultura, lazer e comportamento.</li>
+            </ul>
 
-            </li>
+            <div class="resumo">
+                Os automóveis e os motores a combustão interna do final do século XIX foram mais do que inovações tecnológicas: foram catalisadores de uma nova era que moldou o mundo moderno.
+            </div>
 
-        </div>
-        <div>
-            <!--volta para a pagina inicial-->
-            <button onclick="returnToHome()">Voltar</button>
+            <img src="https://i.ibb.co/XZYKT9VZ/download.jpg" alt="Primeiro automóvel">
         </div>
     </main>
+
     <footer></footer>
     <script src="../js/navigation.js"></script>
 </body>
