--- a/pages/pagina5.html
+++ b/pages/pagina5.html
@@ -9,8 +9,7 @@
 
 <body>
     <header>
-        <img src="../img/logo.png" class="topleft clicable"
-         onclick="returnToHome()" height="100" width="100">
+        <img src="../img/logo.png" class="topleft clicable" onclick="returnToHome()" height="100" width="100">
         <h1>Revolução Industrial</h1>
     </header>
     <main>
@@ -42,13 +41,43 @@
             <li>Transistor (Bardeen, Brattain, Shockley): Eletrônica miniaturizada. Rádio, televisão, primeiros
                 computadores.
             </li>
-
         </div>
         <div>
             <!--volta para a pagina inicial-->
             <button onclick="idademedia()">ir paera a posterior </button>
             <!--vai para a proxima pagina wm relação a tempologia-->
             <button onclick="seculoxx()">ir para o posterior</button>
+        </div>
+        <div class="moreInformations">
+            <h2>veja mais sobre:</h2>
+            <ul>
+                <li>
+                    <div class="item" onclick="maquinadecostura()">
+                        <h3>primeira maquina de costura</h3>
+                        <img src="https://i.ibb.co/LXtMzTc3/download.jpg" alt="download" border="0">
+                    </div>
+                </li>
+                <li>
+                    <div class="item" onclick="telegrafo()">
+                        <h3>primeiro telegrafo</h3>
+
+                        <img src="https://i.ibb.co/Ld4wVBsy/download.jpg">
+                    </div>
+                </li>
+                <li>
+                    <div class="item" onclick="telefone()">
+                        <h3>primeiro telefone (Graham Bell)</h3>
+
+                        <img src="https://i.ibb.co/3yMhTqyH/download.jpg">
+                    </div>
+                </li>
+                <li>
+                    <div class="item" onclick="lampada()">
+                        <h3>primeira lampada</h3>
+                        <img src="https://i.ibb.co/6cfwyyw3/download.jpg">
+                    </div>
+                </li>
+            </ul>
         </div>
     </main>
     <footer></footer>
