--- a/pages/pagina6.html
+++ b/pages/pagina6.html
@@ -9,8 +9,7 @@
 
 <body>
     <header>
-        <img src="../img/logo.png" class="topleft clicable"
-         onclick="returnToHome()" height="100" width="100">
+        <img src="../img/logo.png" class="topleft clicable" onclick="returnToHome()" height="100" width="100">
         <h1>Século XX</h1>
     </header>
     <main>
@@ -50,6 +49,17 @@
             <button onclick="revolucaoindustrial()">ir para anterior</button>
             <!--vai para a proxima pagina wm relação a tempologia-->
             <button onclick="seculoxxi()">ir para o posterior</button>
+        </div>
+        <div class="moreInformations">
+            <h2>veja mais sobre:</h2>
+            <ul>
+                <li>
+                    <div class="item" onclick="carro()">
+                        <h3>primeiros carros</h3>
+                        <img src="https://i.ibb.co/XZYKT9VZ/download.jpg" alt="Primeiro automóvel">
+                    </div>
+                </li>
+            </ul>
         </div>
     </main>
     <footer></footer>
