alterações importantes (imagem, pag, css, etc)

--- a/pages/home.html
+++ b/pages/home.html
@@ -92,20 +92,20 @@
         <ul>
             <li>
             <div class="item" onclick="ferramentaprehistoria()">
-                        <img src="https://i.ibb.co/V0CcKrjZ/download-1.jpg" height="120"
+                        <img src="https://i.ibb.co/yHLGJc1/download-3.jpg" height="120"
                             width="120">
                         <h2>Ferramenta da Pré-História</h2>
                     </div>
                 </li>
                     <li>
                         <div class="item" onclick="dominiodofogo()">
-                                <img src="https://i.ibb.co/V0CcKrjZ/download-1.jpg" height="120" width="120">
+                                <img src="https://i.ibb.co/JFWBXr4y/descobertafogo.jpg" height="120" width="120">
                         <h2>Domínio do Fogo pela Civilização Humana</h2>
                     </div>
                 </li>
                     <li>
                         <div class="item" onclick="nauticaedescobrimento()">
-                                <img src="https://i.ibb.co/V0CcKrjZ/download-1.jpg" height="120" width="120">
+                                <img src="https://i.ibb.co/Xr68wPMp/download-4.jpg" height="120" width="120">
                         <h2>Náutica e Descobrimentos</h2>
                     </div>
                 </li>
@@ -113,19 +113,19 @@
                 <ul>
                 <li>
                         <div class="item" onclick="revolucaocientifica()">
-                                <img src="https://i.ibb.co/V0CcKrjZ/download-1.jpg" height="120" width="120">
+                                <img src="https://i.ibb.co/DfgT2NSd/download-5.jpg" height="120" width="120">
                         <h2>Revolução Científica e Instrumentos</h2>
                     </div>
                 </li>
                  <li>
-                        <div class="item" onclick="revolucaoindustrial()">
-                                <img src="https://i.ibb.co/V0CcKrjZ/download-1.jpg" height="120" width="120">
+                        <div class="item" onclick="revolucaoindustrialdois()">
+                                <img src="https://i.ibb.co/Fb4pB5c7/imagem-preta-e-branca-de-trabalhadores-pobres-trabalhando-nas-maquinas-das-fabricas-recem-criadas-da.jpg" height="120" width="120">
                         <h2>Revolução Industrial (Século XVIII)</h2>
                     </div>
                 </li>
                 <li>
                         <div class="item" onclick="locomotivaferroviaria()">
-                                <img src="https://i.ibb.co/V0CcKrjZ/download-1.jpg" height="120" width="120">
+                                <img src="https://i.ibb.co/rRPr2bDP/images-3.jpg" height="120" width="120">
                         <h2>Locomotiva a Vapor e Expansão Ferroviária</h2>
                     </div>
                 </li>
@@ -135,6 +135,12 @@
                         <div class="item" onclick="maquinadecostura()">
                                 <img src="https://i.ibb.co/V0CcKrjZ/download-1.jpg" height="120" width="120">
                         <h2>Invenção da Máquina de Costura</h2>
+                    </div>
+                </li>
+                 <li>
+                        <div class="item" onclick="invencaodaroda()">
+                                <img src="https://i.ibb.co/gZKq4JyQ/images-2.jpg" height="120" width="120">
+                        <h2>Invenção da Roda</h2>
                     </div>
                 </li>
                 </ul>
