--- a/pages/pagina10.html
+++ b/pages/pagina10.html
@@ -17,7 +17,7 @@
     <main>
         <div class="text">
             <h2>3-A Invenção da Roda: </h2>
-            <img class="right" src="https://i.ibb.co/V0CcKrjZ/download-1.jpg">
+            <img class="right" src="https://i.ibb.co/gZKq4JyQ/images-2.jpg">
             <p>A invenção da roda, por volta de 3500 a.C., é amplamente considerada um dos marcos mais importantes e transformadores na história da humanidade. Embora tenha sido atribuída principalmente às culturas da Mesopotâmia, especialmente à região da Suméria, sua invenção e utilização rapidamente se espalharam por outras partes do mundo antigo, levando a uma revolução nos métodos de transporte, na agricultura e na engenharia.
 
 Antes da invenção da roda, as sociedades antigas dependiam de métodos mais simples e rudimentares para o transporte de pessoas e mercadorias. Isso incluía o uso de trenós, que eram carregados sobre a terra ou neve, bem como o esforço físico de homens e animais para carregar objetos pesados. A introdução da roda transformou completamente esse cenário, permitindo o desenvolvimento de veículos de tração animal mais eficientes e adaptáveis, como os carros de bois e carruagens.
