--- a/pages/pagina11.html
+++ b/pages/pagina11.html
@@ -17,7 +17,7 @@
     <main>
         <div class="text">
             <h2>Náutica e Descobrimentos: </h2>
-            <img class="right" src="https://i.ibb.co/V0CcKrjZ/download-1.jpg">
+            <img class="right" src="https://i.ibb.co/Xr68wPMp/download-4.jpg">
             <p>No século XV, a Europa vivenciou uma revolução náutica que impulsionou a Era dos Descobrimentos, liderada principalmente por Portugal e Espanha. Esse 
                 período marcou avanços significativos na construção naval, com destaque para as caravelas, e no desenvolvimento de mapas náuticos, fundamentais para a 
                 exploração de novos territórios e rotas marítimas. </p>
