--- a/pages/pagina12.html
+++ b/pages/pagina12.html
@@ -17,7 +17,7 @@
     <main>
         <div class="text">
             <h2>Revolução Científica e Instrumentos: </h2>
-            <img class="right" src="https://i.ibb.co/V0CcKrjZ/download-1.jpg">
+            <img class="right" src="https://i.ibb.co/DfgT2NSd/download-5.jpg">
             <p>A Revolução Científica, que se desenrolou principalmente nos séculos XVI e XVII, marcou uma transformação profunda no modo como a humanidade compreendia o 
                 universo e a natureza. Esse período, caracterizado pelo avanço do método científico e pela valorização da observação empírica, foi impulsionado pelo 
                 desenvolvimento de novos instrumentos, como o telescópio e o microscópio, que expandiram os limites do conhecimento humano.
