--- a/pages/pagina13.html
+++ b/pages/pagina13.html
@@ -17,7 +17,7 @@
     <main>
         <div class="text">
             <h2>Revolução Industrial Máquinas a Vapor e Fábricas: </h2>
-            <img class="right" src="https://i.ibb.co/V0CcKrjZ/download-1.jpg">
+            <img class="right" src="https://i.ibb.co/Fb4pB5c7/imagem-preta-e-branca-de-trabalhadores-pobres-trabalhando-nas-maquinas-das-fabricas-recem-criadas-da.jpg">
             <p>A Revolução Industrial, iniciada no século XVIII na Inglaterra, marcou uma transformação profunda na economia, sociedade e tecnologia. A introdução das 
                 máquinas a vapor e o surgimento das fábricas foram elementos centrais desse processo, que revolucionou a produção e alterou o modo de vida da humanidade.
             </p>
