--- a/pages/pagina14.html
+++ b/pages/pagina14.html
@@ -17,7 +17,7 @@
     <main>
         <div class="text">
             <h2>Locomotiva a Vapor e Expansão Ferroviária: </h2>
-            <img class="right" src="https://i.ibb.co/V0CcKrjZ/download-1.jpg">
+            <img class="right" src="https://i.ibb.co/rRPr2bDP/images-3.jpg">
             <p>A invenção da locomotiva a vapor no século XIX foi um marco fundamental no processo de revolução industrial e no desenvolvimento de infraestruturas de 
                 transporte ao redor do mundo. Sua invenção está diretamente associada ao engenheiro britânico George Stephenson, que, em 1814, criou uma das primeiras 
                 locomotivas a vapor utilizáveis comercialmente, chamada Locomotion. No entanto, foi em 1825, com a inauguração da primeira ferrovia pública de passageiros 
