--- a/pages/pagina8.html
+++ b/pages/pagina8.html
@@ -16,7 +16,7 @@
     <main>
         <div class="text">
             <h2>Ferramentas de Pedra na Pré-História: </h2>
-            <img class="right" src="https://i.ibb.co/V0CcKrjZ/download-1.jpg">
+            <img class="right" src="https://i.ibb.co/yHLGJc1/download-3.jpg">
             <p>As ferramentas de pedra representaram um marco fundamental na evolução dos hominídeos, sendo
                 indispensáveis para a sobrevivência e o desenvolvimento das
                 primeiras sociedades humanas. Essas ferramentas, criadas a partir de rochas como sílex, obsidiana e
@@ -78,14 +78,6 @@
                 especializadas do Neolítico, elas moldaram a relação dos hominídeos com o
                 mundo, pavimentando o caminho para o desenvolvimento das sociedades modernas.
             </li>
-            <br>
-            <li>Lançamento de navegadores como Mosaic (1993) e Netscape Navigator (1994).
-                <br>
-
-
-
-            </li>
-
         </div>
         <div>
             <!--volta para a pagina inicial-->
