--- a/pages/pagina9.html
+++ b/pages/pagina9.html
@@ -17,7 +17,7 @@
     <main>
         <div class="text">
             <h2>Domínio do Fogo pelos Humanos: </h2>
-            <img class="right" src="https://i.ibb.co/V0CcKrjZ/download-1.jpg">
+            <img class="right" src="https://i.ibb.co/JFWBXr4y/descobertafogo.jpg">
             <p>O domínio do fogo representa um dos marcos mais significativos na história da humanidade, marcando um ponto de inflexão no desenvolvimento cultural, 
                 tecnológico e social dos hominídeos. A capacidade de produzir e controlar o fogo proporcionou proteção contra predadores, conforto em ambientes frios, 
                 aquecimento e preparo de alimentos, além de abrir novas possibilidades para a inovação e a interação social. Esse avanço permitiu não apenas a 
