--- a/pages/home.html
+++ b/pages/home.html
@@ -133,7 +133,7 @@
                 <ul>
                  <li>
                         <div class="item" onclick="maquinadecostura()">
-                                <img src="https://i.ibb.co/V0CcKrjZ/download-1.jpg" height="120" width="120">
+                                <img src="https://i.ibb.co/FqWtQQPk/Foto1papel.jpg" height="120" width="120">
                         <h2>Invenção da Máquina de Costura</h2>
                     </div>
                 </li>
