--- a/pages/pagina16.html
+++ b/pages/pagina16.html
@@ -17,7 +17,7 @@
     <body>
         <div class="text">
             <h2>O Início da Internet e a Expansão Global: </h2>
-            <img class="right" src="https://i.ibb.co/V0CcKrjZ/download-1.jpg">
+            <img class="right" src="https://i.ibb.co/FqWtQQPk/Foto1papel.jpg">
             <p>Nos anos 1990, a internet, que já existia desde os anos 1960 e 1970 de forma restrita e acadêmica, começou a se expandir para o público em geral. Em 1991, a World Wide Web (WWW) foi criada por Tim Berners-Lee, facilitando a navegação e a interação online por meio de páginas e links. Antes disso, a internet era principalmente uma ferramenta usada por governos, universidades e empresas para fins técnicos e de pesquisa.
 
 A partir do início da década de 1990, com o lançamento de navegadores como o Mosaic (1993) e o Netscape Navigator (1994), a navegação na internet se tornou mais acessível e intuitiva. Isso permitiu que milhões de pessoas ao redor do mundo começassem a explorar a web, acessar informações e interagir online. O desenvolvimento da tecnologia de modems também possibilitou o acesso dial-up, permitindo que as casas conectassem seus computadores à internet por meio de linhas telefônicas.
