--- a/pages/pagina3.html
+++ b/pages/pagina3.html
@@ -12,7 +12,7 @@
         <h1>Idade Antiga</h1>
     </header>
     <main>
-        <div classaleo="text">
+        <div class="text">
             <h2>Antiguidade (4.000 a.C. - 500 d.C.):</h2>
 
             <img class="right" src="https://i.ibb.co/3ybjh1SZ/All-Gizah-Pyramids.jpg">
