mudando titulo das paginas e arrumando o inicio da internet e maquina de costura

--- a/pages/home.html
+++ b/pages/home.html
@@ -143,6 +143,12 @@
                         <h2>Invenção da Roda</h2>
                     </div>
                 </li>
+                <li>
+                        <div class="item" onclick="oiniciodainternet()">
+                                <img src="https://i.ibb.co/yBVvQqkm/download-6.jpg" height="120" width="120">
+                        <h2>O Início da Internet</h2>
+                    </div>
+                </li>
                 </ul>
             </ul>
         </div>
