--- a/pages/pagina1.html
+++ b/pages/pagina1.html
@@ -6,7 +6,7 @@
     <!-- Configuracoes basicas da pagina -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pagina 1</title> <!-- Titulo da pagina que aparece na aba do navegador -->
+    <title>Paleolítico</title> <!-- Titulo da pagina que aparece na aba do navegador -->
     <link rel="stylesheet" href="../css/pages.css"> <!-- Link para o arquivo de estilos -->
 </head>
 
@@ -14,7 +14,7 @@
     <!-- Cabecalho da pagina -->
     <header>
         <img src="../img/logo.png" class="topleft clicable" onclick="returnToHome()" height="100" width="100">
-        <h1>as primeiras ferramentas da humanidade</h1>
+        <h1>As Primeiras Ferramentas da Humanidade</h1>
     </header>
 
     <!-- Conteudo principal -->
