--- a/pages/pagina15.html
+++ b/pages/pagina15.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/pages.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pagina 15</title>
+    <title>Invenção da Máquina de Costura</title>
     <link rel="stylesheet" href="../css/pages.css">
 
 <body>
@@ -17,7 +17,7 @@
     <main>
         <div class="text">
             <h2>Invenção da Máquina de Costura: </h2>
-            <img class="right" src="https://i.ibb.co/V0CcKrjZ/download-1.jpg">
+            <img class="right" src="https://i.ibb.co/FqWtQQPk/Foto1papel.jpg">
             <p>A invenção da máquina de costura, na década de 1840, foi um marco significativo na história da indústria têxtil e no desenvolvimento das técnicas de 
                 fabricação de roupas. Antes desse invento, o processo de costura era totalmente manual, exigindo horas de trabalho árduo e habilidades especializadas. 
                 Esse cenário, no entanto, começou a mudar com as inovações tecnológicas de uma série de inventores que procuravam otimizar a produção de vestuário e 
