--- a/pages/pagina17.html
+++ b/pages/pagina17.html
@@ -5,13 +5,13 @@
     <link rel="stylesheet" href="css/pages.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pagina 17</title>
+    <title>Telegráfo e Código Morse</title>
     <link rel="stylesheet" href="../css/pages.css">
 
 <body>
     <header>
         <img src="../img/logo.png" class="topleft clicable" onclick="returnToHome()" height="100" width="100">
-        <h1>telegrafo e codigo morse</h1>
+        <h1>Telegráfo e Código Morse</h1>
     </header>
     <main>
         <div class="text">
