--- a/pages/pagina12.html
+++ b/pages/pagina12.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/pages.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pagina 12</title>
+    <title>Revolução Científica</title>
     <link rel="stylesheet" href="../css/pages.css">
 
 <body>
