--- a/pages/pagina16.html
+++ b/pages/pagina16.html
@@ -5,19 +5,19 @@
     <link rel="stylesheet" href="css/pages.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pagina 16</title>
+    <title>O Início da Internet e a Expansão Global</title>
     <link rel="stylesheet" href="../css/pages.css">
 
 <body>
     <header>
         <img src="../img/logo.png" class="topleft clicable" onclick="returnToHome()" height="100" width="100">
-        <h1>Invenção da Máquina de Costura (década de 1840)</h1>
+        <h1>O Início da Internet e a Expansão Global:</h1>
     </header>
 
     <body>
         <div class="text">
             <h2>O Início da Internet e a Expansão Global: </h2>
-            <img class="right" src="https://i.ibb.co/FqWtQQPk/Foto1papel.jpg">
+            <img class="right" src="https://i.ibb.co/yBVvQqkm/download-6.jpg">
             <p>Nos anos 1990, a internet, que já existia desde os anos 1960 e 1970 de forma restrita e acadêmica, começou a se expandir para o público em geral. Em 1991, a World Wide Web (WWW) foi criada por Tim Berners-Lee, facilitando a navegação e a interação online por meio de páginas e links. Antes disso, a internet era principalmente uma ferramenta usada por governos, universidades e empresas para fins técnicos e de pesquisa.
 
 A partir do início da década de 1990, com o lançamento de navegadores como o Mosaic (1993) e o Netscape Navigator (1994), a navegação na internet se tornou mais acessível e intuitiva. Isso permitiu que milhões de pessoas ao redor do mundo começassem a explorar a web, acessar informações e interagir online. O desenvolvimento da tecnologia de modems também possibilitou o acesso dial-up, permitindo que as casas conectassem seus computadores à internet por meio de linhas telefônicas.
