--- a/pages/pagina18.html
+++ b/pages/pagina18.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/pages.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pagina 18</title>
+    <title>Telefone de Graham Bell</title>
     <link rel="stylesheet" href="../css/pages.css">
 <body>
     <header>
