--- a/pages/pagina3.html
+++ b/pages/pagina3.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="../css/pages.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pagina3</title>
+    <title>Idade Antiga</title>
     <header>
         <img src="../img/logo.png" class="topleft clicable" onclick="returnToHome()" height="100" width="100">
 
