--- a/pages/pagina7.html
+++ b/pages/pagina7.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="../css/pages.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pagina 7</title>
+    <title>Século XXI</title>
 
 <body>
     <header>
