--- a/pages/pagina8.html
+++ b/pages/pagina8.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="../css/pages.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pagina 8</title>
+    <title>Ferramentas da Pré-História</title>
     <link rel="stylesheet" href="../css/pages.css">
 
 <body>
